text and imageview should be joint

--- a/app/src/main/res/layout/rowlayoutimage.xml
+++ b/app/src/main/res/layout/rowlayoutimage.xml
@@ -3,10 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/itemTextView"
-        android:layout_width="279dp"
-        android:layout_height="50dp"
-        android:textSize="20sp" />
+    <ImageView
+        android:id="@+id/itemImageView"
+        android:layout_width="50dp"
+        android:layout_height="50dp"/>
 
 </LinearLayout>
