--- a/app/src/main/res/layout/rowlayout.xml
+++ b/app/src/main/res/layout/rowlayout.xml
@@ -3,6 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <ImageView
+        android:id="@+id/itemImageView"
+        android:layout_width="50dp"
+        android:layout_height="50dp"/>
     <TextView
         android:id="@+id/itemTextView"
         android:layout_width="279dp"
