first functionable filter app

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,21 +10,25 @@
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/tsumsearchView"
+        app:layout_constraintBottom_toTopOf="@+id/tsumtextsearch"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.491" />
 
-    <SearchView
+    <EditText
 
-        android:id="@+id/tsumsearchView"
+        android:id="@+id/tsumtextsearch"
         android:layout_width="match_parent"
         android:layout_height="53dp"
         android:background="#FFFFFF"
+        android:focusable="true"
+        android:clickable="true"
+        android:hint="@string/welche_kategorie_wird_gesucht"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
